syntax = "proto3";

package auth;

service AuthService {
  rpc Register (RegisterRequest) returns (RegisterResponse) {}
  rpc Login (LoginRequest) returns (LoginResponse) {}
  rpc Validate (ValidateRequest) returns (ValidateResponse) {}
}

message RegisterRequest {
  string email = 1;
  string password = 2;
}

message RegisterResponse {
  int32 status = 1;
  string message = 2;
  DataRegisterResponse data = 3;
  repeated string error = 4;
}

message DataRegisterResponse {
  int32 id = 1;
  string email = 2;
  string created_at = 3;
  string updated_at = 4;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  int32 status = 1;
  string message = 2;
  DataLoginResponse data = 3;
  repeated string error = 4;
}

message DataLoginResponse {
  string access_token = 1;
}

message ValidateRequest {
  string token = 1;
}

message ValidateResponse {
  int32 status = 1;
  repeated string error = 2;
  int32 userId = 3;
}